syntax = "proto3";

package payment;

option go_package = "pkg/pb/payment/v1;v1";


service Payment {
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}
message OrderRequest {
  string order_uuid = 1;
  string user_uuid = 2;
  PaymentMethod payment_method = 3;
}

enum PaymentMethod {
  PAYMENT_METHOD_UNKNOWN = 0; // Неизвестный способ
  PAYMENT_METHOD_CARD = 1; // Банковская карта
  PAYMENT_METHOD_SBP = 2; // Система быстрых платежей
  PAYMENT_METHOD_CREDIT_CARD = 3; // Кредитная карта
  PAYMENT_METHOD_INVESTOR_MONEY = 4; // Деньги инвестора
}

message PayOrderRequest {
  OrderRequest order = 1;
}

message PayOrderResponse {
  string transaction_uuid = 1; // UUID транзакции оплаты
}